# MMemos

./: .gitignore  .prettierrc  README.md  gen_api.sh  gen_api_type.sh  index.html  openapitools.json  package.json  package.test-deps.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/models/: api_http_body.rs  apiv1_activity_memo_comment_payload.rs  apiv1_activity_payload.rs  apiv1_field_mapping.rs  apiv1_identity_provider.rs  apiv1_identity_provider_config.rs  apiv1_identity_provider_type.rs  apiv1_location.rs  apiv1_memo.rs  apiv1_o_auth2_config.rs  apiv1_shortcut.rs  apiv1_user_setting.rs  apiv1_workspace_custom_profile.rs  apiv1_workspace_general_setting.rs  apiv1_workspace_memo_related_setting.rs  apiv1_workspace_setting.rs  apiv1_workspace_storage_setting.rs  apiv1_workspace_storage_setting_storage_type.rs  googlerpc_status.rs  inbox_service_update_inbox_request.rs  list_node_kind.rs  memo_service_rename_memo_tag_body.rs  memo_service_set_memo_relations_body.rs  memo_service_set_memo_resources_body.rs  memo_service_upsert_memo_reaction_body.rs  mod.rs  protobuf_any.rs  resource_service_update_resource_request.rs  setting_is_the_setting_to_update_.rs  shortcut_service_update_shortcut_request.rs  table_node_row.rs  the_identity_provider_to_update_.rs  user_role.rs  (+80 more)
src-tauri/src/store/: memo.rs  mod.rs  model.rs
src-tauri/src/utils/: path.rs
(+71 files in other folders)
