[package]
name = "mmm-memos"
version = "0.1.0"
description = "Memos Mobile App"
authors = ["booiris"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mmm_memos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-http = "2"
tauri-plugin-log = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24"
url = "2.4"
log = "0.4"
tauri-plugin-persisted-scope = "2"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros"
] }
serde_json = "1"
serde_repr = "^0.1"
dashmap = { version = "6.1.0", features = ["serde", "inline"] }
tokio = { version = "1", features = ["full"] }
parking_lot = { version = "0.12", features = ["serde"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"
